--- a/ponuda.html
+++ b/ponuda.html
@@ -158,22 +158,60 @@
 
 
 
-
       <div class="container-fluid">
-      <div class="container justify-content-center">
-          <div class="row">
-              <div class="rounded-domain-box search-container justify-content-start">
-                  <form class="d-flex h-100" action="#">
+          <div class="container justify-content-center my-3">
+              <div class="rounded-domain-box search-container ">
+                  <form class="d-flex flex h-100 w-auto" action="#">
                       <input id="search-input" class="form-control" type="search" placeholder="Proverite dostupnost željenog domena" aria-label="Search">
                   </form>
               </div>
           </div>
+          <div class="container align-items-center  my-3">
+              <div class="row  justify-content-center row-cols-1 row-cols-sm-2 row-cols-md-3 row-cols-lg-4 row-cols-xl-6 g-3">
+                  <div class="col-6 col-md-4 col-lg-3 me-1 card text-center">
+                      <div class="card-body">
+                          <h5 class="card-title">.com 1400 rsd godišnje</h5>
+                      </div>
+                  </div>
+
+                  <div class="col-6 col-md-4 col-lg-3 me-1 card text-center">
+                      <div class="card-body">
+                          <h5 class="card-title">.info 1800 rsd godišnje</h5>
+                      </div>
+                  </div>
+
+                  <div class="col-6 col-md-4 col-lg-3 me-1 card text-center">
+                      <div class="card-body">
+                          <h5 class="card-title">.co.rs	850 rsd godišnje</h5>
+                      </div>
+                  </div>
+
+                  <div class="col-6 col-md-4 col-lg-3 me-1 card text-center">
+                      <div class="card-body">
+                          <h5 class="card-title">.net 1500 rsd godišnje</h5>
+                      </div>
+                  </div>
+
+                  <div class="col-6 col-md-4 col-lg-3 me-1 card text-center">
+                      <div class="card-body">
+                          <h5 class="card-title">.rs 2300 rsd godišnje</h5>
+                      </div>
+                  </div>
+
+                  <div class="col-6 col-md-4 col-lg-3 me-1 card text-center">
+                      <div class="card-body">
+                          <h5 class="card-title">.in.rs	500 rsd godišnje</h5>
+                      </div>
+                  </div>
+              </div>
+          </div>
       </div>
-    </div>
 
 
 
-    <div class="container-fluid">
+
+
+      <div class="container-fluid">
         <div class="row align-items-center justify-content-center d-flex flex-wrap justify-content-center py-3 mb-4 border-bottom">
             <div class="col-sm-12 col-md-6 center mb-3 mb-md-0 center text-center">
                 <img src="images/stickman.png" class="picture2 w-auto" alt="Server">
@@ -209,8 +247,8 @@
                             <span class="fs-4 naslovStraniceUFooteru">CyperWebb</span>
                         </a>
                     </div>
-                    <div class="col-md-6 col-12 me-5 justify-content-evenly  d-md-block d-none">
-                        <div class="row align-items-center">
+                    <div class="col-md-6 col-12 me-5 justify-content-evenly   d-md-block d-none">
+                        <div class="row  align-items-center">
                             <div class="col-md-4">
                                 <ul class="list-unstyled link-body-emphasis text-decoration-none">
                                     <li><a href="index.html">Početna stranica</a></li>
@@ -224,7 +262,7 @@
                                     <li><a href="#">Mailista</a></li>
                                 </ul>
                             </div>
-                            <div class="col-md-4">
+                            <div class=" col-md-4">
                                 <p class="mailista">Prijavite se na našu mailistu</p>
                                 <div class="rounded-mailist-box search-container justify-content-start">
                                     <form class="d-flex h-100 " action="#">
